--- a/server/pom.xml
+++ b/server/pom.xml
@@ -143,13 +143,13 @@
             <version>3.0</version>
         </dependency>
         <dependency>
-            <groupId>BotApi</groupId>
-            <artifactId>BotApi</artifactId>
+            <groupId>bot_sdk</groupId>
+            <artifactId>bot_sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>java_sdk</groupId>
-            <artifactId>java_sdk</artifactId>
+            <groupId>pay_sdk</groupId>
+            <artifactId>pay_sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
